TODO
* what about trailing data in xp lnk files ?
* what about shell items
* what about ole properties

Checks
* compare environment variables string and unicode string
* compare icon location data string, string and unicode string
  - data string not necessary equal to string in data block, due to expansion of %VAR%

Refactor
* volume information read into separate subfunction
* network share information read into separate subfunction

Debug
* print descriptive name of data_block_signature
* print values of additional extra blocks
  - console properties data block
  - console codepage data block
  - shim layer data block
  - metadata property store data block
  - shell item identifiers list data block
* remaining known folder identifiers in test set

Library
* create API functions to access link information values
* move libbfio handle from io handle to file
* update support check signature (pff)
* move shell item code into libfwsi (check)
* add libfvalue

API
* add functions
  - for shell item
  - for icon location block ?
  - for special and/or known folder identifier

Release:
* check TODOs
* configure
 - check inclusion local library functions
* update manuals
* update macosx package files
* automated tests

Bindings:
* python
* .net
* java

20120312
* worked on Python bindings (pylnk)
  - worked on get/set attribute functions
* libfwsi code clean up

20120309
* worked on Python bindings (pylnk)
  - worked on get/set attribute functions

20120307
* worked on Python bindings (pylnk)
  - added parsing of codepage string

20120306
* worked on Python bindings (pylnk)
  - added passing of file object

20120305
* worked on Python bindings (pylnk)
* updated libnotify, libsystem, libbfio, libfwsi
* added dpkg files
* added liblnk.rc

20120102
* 2012 update

20111112
* updated libsystem, libcstring

20111101
* updated libcstring, libsystem, libuna, libbfio, libfdatetime
* added windows codepage 932 and 936 support
* updated lnkinput

20111030